# kiwi

./: .gitignore  Cargo.toml  Iris.ipynb  README.md  adult_xdg.ipynb
src/: explainer.rs  lib.rs
src/kiwi/: discretizer.rs  mod.rs  tabularexplainer.rs
