[package]
name = "kiwi"
version = "0.1.0"
authors = ["James Welchman <james.welchman@gmail.com>"]
edition = "2018"

[lib]
name = "kiwi"
crate-type = ["cdylib"]

[dependencies]
blas-src = { version = "0.8", features = ["openblas"] }

numpy = "0.13.1"
statistics = "0.4.1"
rand = {version = "0.8.3", features = ["small_rng"]}
statrs = "0.14.0"
serde = "1.0.126"
serde_json = "1.0.64"

[dependencies.ndarray]
version = "0.15"
features = ["blas", "std", "approx"]
default-features = false

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies.ndarray-linalg]
git = "https://github.com/rust-ndarray/ndarray-linalg"
features = ["openblas-static"]
